--- a/bot/package.json
+++ b/bot/package.json
@@ -2,12 +2,12 @@
   "name": "Sheriff",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Sheriff.js",
   "keywords": [],
   "author": "NotMyFault",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^12.5.3",
-    "dotenv": "^16.0.3"
+    "discord.js": "14.11.0",
+    "dotenv": "16.0.3"
   }
 }
