--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,6 +7,5 @@
   "labels": [
     "dependencies"
   ],
-  "rebaseWhen": "conflicted",
-  "schedule": ["on the first day of the month"]
+  "rebaseWhen": "conflicted"
 }
