--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,5 +7,6 @@
   "labels": [
     "dependencies"
   ],
-  "rebaseWhen": "conflicted"
+  "rebaseWhen": "conflicted",
+  "schedule": ["on the first day of the month"]
 }
